--- a/index.njk
+++ b/index.njk
@@ -1,14 +1,14 @@
 ---
 layout: layouts/home.njk
 eleventyNavigation:
-  key: Home
+  key: Start
   order: 1
 ---
 
-<h1>Latest 3 Posts</h1>
+<h1>Laatste 3 berichten</h1>
 
 {% set postslist = collections.posts | head(-3) %}
 {% set postslistCounter = collections.posts | length %}
 {% include "postslist.njk" %}
 
-<p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p>
+<p>Zie voor meer <a href="{{ '/posts/' | url }}">het archief</a>.</p>
