blog start artikel afgeschreven

--- a/posts/blog-start.njk
+++ b/posts/blog-start.njk
@@ -1,5 +1,5 @@
 ---
-title: Sjerp van Wouden van start op sjerpvanwouden.nl.
+title: Eindelijk weer een blog! Wat wil ik eigenlijk?
 description: Introductie van mijn blog
 date: 2020-09-08
 tags:
@@ -7,3 +7,18 @@ tags:
 layout: layouts/post.njk
 ---
 
+<p>Het zat er al heel lang aan te komen, een nieuwe site op sjerpvanwouden.nl of sjerpbouwtsites.nl. Met een overvolle agenda en zoveel projecten sneuvelde het bouwen van een eigen en nieuw blog echter telkens. Het schoof maar op, telkens bijna bovenaan mijn prioriteitenlijst, maar net niet superprio (ofzo). Met uitstel kwam meer mentale last van het hele project. Er waren wel veel andere taken van afhankelijk. Dus er moest een knoop doorgehakt worden. Ik zit effectief al 2 jaar zonder professionele site en 6 jaar zonder blog.</p>
+
+<p>Ik zou dit bouwen, dat bouwen, ontwerpen, een heel framework erbij leren, etc etc, echt een supertof visitekaartje neerzetten. Misschien dat ik dat ooit nog doe. Misschien niet. Deze site draait op een basis-installatie van <a href='https://www.11ty.dev/'>Eleventy</a> en dat kan ik blijkbaar gaandeweg aanpassen zonder veel problemen. Het werkt redelijk out of the box, niet echt een leercurve. Zal je zien dat nu ik 'm live heb dit stomweg de uiteindelijke voor maanden zal blijven 🙄 Het is een beetje raar om al mn HTML zelf te moeten schrijven. Ik zal wel iets voordehandsliggends hebben gemist.</p>
+
+<h2>Web development, politiek activisme en analyse, metal cq muziek, ontwerp</h2>
+
+<p>Eerder had ik een professionele site op sjerpbouwtsites.nl. Dat was onderdeel van m'n ZZP-marketing. Die webdevelopment cowboytijd is echter dood of stervende. Het internet in z'n algemeenheid heeft de kutheid van de wereld tot zich genomen en in zekere opzichten tot nieuwe hoogtes gebracht. Hierover zal ik onder andere mijn <s>vitriool</s> ehh, analyse delen. </p>
+
+<p>Ik ben al jaren politiek actief en schreef in het verleden vele stukken. Jaren heb ik dat laten liggen. Nu kriebelt het toch weer. Waar ik over zal schrijven zal vrij breed zijn want mijn interesses zijn bijzonder breed en ik heb inmiddels met 15 jaar ervaring ongeveer overal wel eens een kijk in de keuken genomen. De interactie tussen mijn activisme en m'n beroep zie je onder andere terug in <a href='https://kraakapp.nl' target='_blank'>de kraakapp</a>.</p>
+
+<p>Muziek maken en luisteren zijn vaste peilers in m'n leven. Misschien dat ik daar iets over wil delen hier, nog niet echt een duidelijk idee hoe. Ik deel veel nieuwe releases met vrienden, misschien kan ik die bundelen. M'n band werkt continu aan nieuw materiaal. Hisschien dat gaan kronieken? Mocht je toevallig atmosferische black metal de shit vinden zie dan hier de demo van me band, <a href='https://archeopessimism.bandcamp.com/album/dispossessed-demo' target='_blank'>Dispossessed</a>.
+
+<p>En dan ontwerp ik ook nog eens wat. Stickers, posters, sites. Na jaren doorbuffelen meen ik er daadwerkelijk wat van te kunnen. En dan kan ik eindelijk mensen verwijzen naar een site om m'n stickers te bestellen. Misschien deel ik wel m'n tenenkrommende werk van 10 jaar terug om te laten zien dat ik bepaald geen natuurtalent was 🤣</p>
+
+<p>En mogelijk maak in een appje dat her en der door de site heen woordgrappen verstopt. Maar misschien ook niet. </p>
