--- a/index.njk
+++ b/index.njk
@@ -1,11 +1,12 @@
 ---
 layout: layouts/home.njk
-eleventyNavigation:
-  key: Start
-  order: 1
 ---
 
-<h1>Laatste 3 berichten</h1>
+<h1>Websites Marxisme Bier Metal Kunst Actie Sjerp</h1>
+
+<p>Doelstelling sjerpvanwouden.nl: Sjerp acuut oninteressant maken voor bedrijven die mij  HRsomentwille zoeken, of in ieder geval mijn potentie&euml;le salaris met €750,- in de maand om laag te brengen.</p>
+
+<p>Deze site is net nieuw. Deze pagina is nog niet doordacht. Ik heb hier soort van iets geschreven <a href='/posts/blog-start/'>over deze site</a>.</p>
 
 {% set postslist = collections.posts | head(-3) %}
 {% set postslistCounter = collections.posts | length %}
