--- a/tags.njk
+++ b/tags.njk
@@ -12,7 +12,7 @@ pagination:
   addAllPagesToCollections: true
 layout: layouts/home.njk
 renderData:
-  title: {{ tag | capitalize}}
+  title: {{ tag }}
 permalink: /{{ tag }}/
 ---
 <h1>{{ tag | capitalize}}</h1>
