--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -12,11 +12,13 @@
   <body>
     <header>
       <h1 class="home"><a href="{{ '/' | url }}">{{ metadata.title }}</a></h1>
-
-      <ul class="nav">
+      <ul id='base.njk nav' class="nav">
       {%- for entry in collections.all | eleventyNavigation %}
         <li class="nav-item{% if entry.url == page.url %} nav-item-active{% endif %}"><a href="{{ entry.url | url }}">{{ entry.title }}</a></li>
       {%- endfor %}
+        <!-- TODO fix hack -->
+        <li class="nav-item {{'nav-item-active' if '/ontwerp' in page.url}}"><a href="/ontwerp/">Ontwerp</a></li>
+        <li class="nav-item {{'nav-item-active' if '/socialisme' in page.url}}"><a href="/socialisme/">Socialisme</a></li>
       </ul>
     </header>
 
