socialisme naar actie hernoemds

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
       {%- endfor %}
         <!-- TODO fix hack -->
         <li class="nav-item {{'nav-item-active' if '/ontwerp' in page.url}}"><a href="/ontwerp/">Ontwerp</a></li>
-        <li class="nav-item {{'nav-item-active' if '/socialisme' in page.url}}"><a href="/socialisme/">Socialisme</a></li>
+        <li class="nav-item {{'nav-item-active' if '/actie' in page.url}}"><a href="/actie/">Actie</a></li>
       </ul>
     </header>
 
