muziek categorie toegevoegd

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -19,6 +19,7 @@
         <!-- TODO fix hack -->
         <li class="nav-item {{'nav-item-active' if '/ontwerp' in page.url}}"><a href="/ontwerp/">Ontwerp</a></li>
         <li class="nav-item {{'nav-item-active' if '/actie' in page.url}}"><a href="/actie/">Actie</a></li>
+        <li class="nav-item {{'nav-item-active' if '/muziek' in page.url}}"><a href="/muziek/">Muziek</a></li>        
       </ul>
     </header>
 
