begin programmeren cat

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -20,6 +20,7 @@
         <li class="nav-item {{'nav-item-active' if '/ontwerp' in page.url}}"><a href="/ontwerp/">Ontwerp</a></li>
         <li class="nav-item {{'nav-item-active' if '/actie' in page.url}}"><a href="/actie/">Actie</a></li>
         <li class="nav-item {{'nav-item-active' if '/muziek' in page.url}}"><a href="/muziek/">Muziek</a></li>        
+        <li class="nav-item {{'nav-item-active' if '/programmeren' in page.url}}"><a href="/programmeren/">Programmeren</a></li>          
       </ul>
     </header>
 
